[package]
name = "rusty-avr-blinky"
version = "0.1.0"
authors = ["Riesi"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "rusty-avr-blinky"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.2.0"
nb = "1.1.0"
embedded-hal = "1.0.0-alpha.10"

[dependencies.avr-device]
version = "0.5.1"
features = ["atmega328p", "rt"]

[dependencies.atmega-hal]
git = "https://github.com/rahix/avr-hal"
features = ["atmega328p"]


# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
